[package]
name = "term-rpg-rs"
version = "0.1.0"
edition = "2024"

[workspace.metadata.rust-analyzer.diagnostics]
disabled = ["unlinked"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
libc = "0.2"
serde = { version = "1.0.224", features = ["derive"] }
ron = "0.11.0"
bincode = { version = "2.0.1", features = ["serde"] }
my_term = "0.0.1"
chrono = "0.4.42"
mlua = { version = "0.11.4", features = ["serde", "lua54", "macros", "vendored"]}
